# pscm

./: .gitignore  Makefile  api.c  api.h  builtin.c  docs.md  example.c  json.c  main.c  meson.build  pscm-format.c  pscm.h  reader.c  reader.h  value.c  vm.c  vm.h
examples/: chat_completions.pscm  hello.pscm  json_example.pscm  run_hello.c  test_shell.pscm
src/: builtin.c  json.h  meson.build  pscm.h  value.h  vm.c
